--- a/public/index.html
+++ b/public/index.html
@@ -20,6 +20,12 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 
     <title>Walk Wise-Home</title>
+
+    <script type="text/javascript">
+      var redirectTo = window.location.pathname.substring(1);
+      window.location.href = window.location.origin + '/#/' + redirectTo;
+    </script>
+    
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
